# labauto

./: .gitmodules
bayesopt_ros_bridge/physbo_ros_bridge/: .gitignore  LICENSE  README.md
bayesopt_ros_bridge/physbo_ros_bridge/examples/: test_physbo_interface.py
bayesopt_ros_bridge/physbo_ros_bridge/examples/data/: candidates.csv  results.csv
bayesopt_ros_bridge/physbo_ros_bridge/launch/: physbo_ros_bridge.launch
comm_interfaces/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
comm_interfaces/src/comm_interfaces/: serial_interface.py
labauto_instruments/optris_ros/: CMakeLists.txt  README.md  package.xml  setup.py
labauto_instruments/optris_ros/launch/: xi80.launch
labauto_instruments/optris_ros/scripts/: xi80_ros_node.py
labauto_instruments/optris_ros/src/optris_ros/: optris_ros.py
labauto_instruments/optrispy/: README.md  setup.py
labauto_instruments/optrispy/optrispy/: optris_interface.py
labauto_instruments/optrispy/tests/: xi80_test.py
labauto_tutorials/bayesopt/: .gitignore  README.md  candidates.csv  exp_results.csv  parameter_search_physbo.py
robot_control/euslisp/: robot-control.l
