<package format="2">
  <name>comm_interfaces</name>
  <version>1.1.0</version>
  <description> Communication interfaces </description>

  <maintainer email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</maintainer>
  <author email="yasano@g.ecc.u-tokyo.ac.jp">Yuki Asano</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
